  - Enhancement  #1282 Add movie poster FilmAffinity
  - Fixed defect #1289 Release Date or Premiered date is not being loaded from NFO file
  - Fixed defect #1290 FilmAffinity plot no longer retrieved from website
  - Fixed defect #1293 filmaffinity title is wrong for spanish users
  - Enhancement  #1296 Force rescan of XML data if UNKNOWN exists, or XML is stale
  
MovieJukebox 1.8
----------------
  - Enhancement	  #145 Dual Language-Flag for DVDs
  - Enhancement	  #274 Danish Plugin  
  - Enhancement   #400 Option to trim plot length for TheTVDB plots
  - Enhancement   #503 Simplify skins by figuring out the vod/vcd/playlist attributes in YAMJ itself (updated)
  - Fixed defect  #535 Appears the order of libraries in the xml makes a difference on output.
  - Fixed defect  #779 1x00 files lastPart is incorrect    
  - Fixed defect  #794 NFO partsing problem for IMDb link
  - Fixed defect  #797 r965: OfdbPlugin ignores Plot from NFO
  - Fixed defect  #832 Indexing of Cast, Director, etc is not performed when the movie is in a set  
  - Fixed defect  #945 imdb.getCertificationFromMPAA setting is ignored if mpaa tag is present in the NFO
  - Fixed defect  #985 filename.scanner.skip.keywords has issues  
  - Fixed defect  #998 NFO files not read correctly with filmaffinity plugin  
  - Fixed defect #1004 Unable to scan tv series or movies since enabling index for cast and director  
  - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link
  - Enhancement  #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)  
  - Fixed issue  #1018 Null pointer in main if you remove Title index from moviejukebox.properties.  
  - Fixed defect #1022 ofdb.plugin overwrites nfo information
  - Enhancement  #1148 Categories.xml list ordering  
  - Fixed defect #1152 Moviejukebox does not complete - stuck on Sratim plugin  
  - Fixed defect #1156 BAd forma date with plugin mjb.internet.plugin=com.moviejukebox.plugin.FilmUpITPlugin  